[gd_scene load_steps=3 format=3 uid="uid://d0cfhjfq867ti"]

[ext_resource type="Script" uid="uid://l0ycwsk4g0do" path="res://Scripts/Shop/store_items.gd" id="1_v5pnn"]
[ext_resource type="Texture2D" uid="uid://c1susdepcj74f" path="res://icon.svg" id="2_hd8y4"]

[node name="StoreItem" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_v5pnn")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_hd8y4")

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Heading 1"
autowrap_mode = 3

[node name="Label2" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Heading 2"
autowrap_mode = 2

[node name="Button" type="Button" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "BUY"

[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="tree_exited" from="HBoxContainer/MarginContainer2/VBoxContainer/Button" to="." method="_on_button_tree_exited"]
